--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^5.2.1",
     "firebase-functions": "^0.6.3",
     "isomorphic-unfetch": "^2.0.0",
+    "lru-cache": "^4.1.1",
     "moment": "^2.18.1",
     "next": "^3.2.2",
     "preact": "^8.2.5",
@@ -36,6 +37,7 @@
     "@google-cloud/nodejs-repo-tools": "^1.4.17",
     "@types/express": "^4.0.37",
     "@types/firebase": "^2.4.32",
+    "@types/lru-cache": "^4.1.0",
     "@types/next": "^2.4.2",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
