--- a/app/package.json
+++ b/app/package.json
@@ -31,9 +31,7 @@
     "sw-precache": "^5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "typescript": "^2.5.2",
-    "webpack-bundle-analyzer": "^2.9.0"
-  },
-  "devDependencies": {
+    "webpack-bundle-analyzer": "^2.9.0",
     "@google-cloud/nodejs-repo-tools": "^1.4.17",
     "@types/express": "^4.0.37",
     "@types/firebase": "^2.4.32",
