Add a postinstall script

--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "prod": "tsc -p tsconfig.prod.json && next build && NODE_ENV=production node server/server.js",
     "build": "tsc -p tsconfig.prod.json && next build",
     "analyze": "cross-env ANALYZE=1 next build",
-    "start": "next build && NODE_ENV=production node server/server.js"
+    "start": "next build && NODE_ENV=production node server/server.js",
+    "postinstall": "yarn build"
   },
   "engines": {
     "node": "8.x"
