--- a/app/package.json
+++ b/app/package.json
@@ -32,10 +32,11 @@
     "sw-precache": "^5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "typescript": "^2.5.2",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^2.9.0"
+  },
+  "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^1.4.17",
     "@types/express": "^4.0.37",
-    "@types/firebase": "^2.4.32",
     "@types/lru-cache": "^4.1.0",
     "@types/next": "^2.4.2",
     "@types/react": "^16.0.5",
