--- a/app/package.json
+++ b/app/package.json
@@ -39,7 +39,7 @@
     "@types/express": "^4.0.37",
     "@types/lru-cache": "^4.1.0",
     "@types/next": "^2.4.2",
-    "@types/react": "16.0.5",
+    "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
     "@types/webpack": "^3.0.11",
     "concurrently": "^3.5.0",
