Cache the homepage for a minute in firebase

--- a/firebase.json
+++ b/firebase.json
@@ -38,6 +38,15 @@
         ]
       },
       {
+        "source": "/",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=60"
+          }
+        ]
+      },
+      {
         "source": "/@(top|best|new|ask|show|job|item)",
         "headers": [
           {
