Set cache header for manifest.json (firebase)

--- a/firebase.json
+++ b/firebase.json
@@ -38,6 +38,15 @@
         ]
       },
       {
+        "source": "/manifest.json",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      },
+      {
         "source": "/",
         "headers": [
           {
